--- a/demo/day100/day100/day000.html
+++ b/demo/day100/day100/day000.html
@@ -42,6 +42,7 @@
         <a href="day013.html">Day 013 - 使用Grid实现各种布局</a>
         <a href="day014.html">Day 014 - 化学元素周期表</a>
         <a href="day015.html">Day 015 - 中国历史年代表</a>
+        <a href="day016.html">Day 016 - 下雨动画</a>
     </div>
 </body>
 </html>
