--- a/demo/animate.css/animate.html
+++ b/demo/animate.css/animate.html
@@ -6,141 +6,175 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>仿animate.css</title>
   <link rel="stylesheet" href="animate.css">
+  <style>
+    ul{
+      position: absolute;
+      top: 0;
+      left: 0;
+      list-style-type: none;
+      padding-left: 10px;
+      font-size: 20px;
+    }
+    ul > div{
+      font-weight: 800;
+      cursor: pointer;
+      height: 30px;
+      line-height: 30px;
+    }
+    ul > div:hover{
+      text-decoration: underline;
+    }
+    li{
+      padding-left: 10px;
+    }
+    li > section{
+      cursor: pointer;
+      font-weight: 400;
+      color: gray;
+    }
+    li > section:hover{
+      color: black;
+      text-decoration: underline;
+    }
+    .show{
+      display: block;
+    }
+    .sh{
+      display: none;
+    }
+  </style>
 </head>
 <body>
   <div id="animate" class="bounce">Animate.css</div>
 
-  <div id="sel">
-      <select name="" id="animates">
-          <optgroup label="Attention Seekers">
-            <!-- <option value="none">none</option> -->
-            <option value="bounce">bounce</option>
-            <option value="flash">flash</option>
-            <option value="pluse">pluse</option>
-            <option value="rubberBand">rubberBand</option>
-            <option value="shake">shake</option>
-            <option value="swing">swing</option>
-            <option value="tada">tada</option>
-            <option value="wobble">wobble</option>
-            <option value="jello">jello</option>
-          </optgroup>
-          <optgroup label="Bouncing Entraces">
-            <option value="bounceIn">bounceIn</option>
-            <option value="bounceInDown">bounceInDown</option>
-            <option value="bounceInLeft">bounceInLeft</option>
-            <option value="bounceInRight">bounceInRight</option>
-            <option value="bounceInUp">bounceInUp</option>
-          </optgroup>
-          <optgroup label="Bouncing Exits">
-            <option value="bounceOut">bounceOut</option>
-            <option value="bounceOutDown">bounceOutDown</option>
-            <option value="bounceOutLeft">bounceOutLeft</option>
-            <option value="bounceOutRight">bounceOutRight</option>
-            <option value="bounceOutUp">bounceOutUp</option>
-          </optgroup>
-          <optgroup label="Fading Extraces">
-            <option value="fadeIn">fadeIn</option>
-            <option value="fadeIndown">fadeInDown</option>
-            <option value="fadeInDownBig">fadeInDownBig</option>
-            <option value="fadeInLeft">fadeInLeft</option>
-            <option value="fadeInLeftBig">fadeInLeftBig</option>
-            <option value="fadeInRight">fadeInRight</option>
-            <option value="fadeInRightBig">fadeInRightBig</option>
-            <option value="fadeInUp">fadeInUp</option>
-            <option value="fadeInUpBig">fadeInUpBig</option>
-          </optgroup>
-          <optgroup label="Fading Exits">
-            <option value="fadeOut">fadeOut</option>
-            <option value="fadeOutDown">fadeOutDown</option>
-            <option value="fadeOutDownBig">fadeOutDownBig</option>
-            <option value="fadeOutLeft">fadeOutLeft</option>
-            <option value="fadeOutLeftBig">fadeOutLeftBig</option>
-            <option value="fadeOutRight">fadeOutRight</option>
-            <option value="fadeOutRightBig">fadeOutRightBig</option>
-            <option value="fadeOutUp">fadeOutUp</option>
-            <option value="fadeOutUpBig">fadeOutUpBig</option>
-          </optgroup>
-          <optgroup label="Flippers">
-            <option value="flip">flip</option>
-            <option value="flipInx">flipInx</option>
-            <option value="flipInY">flipIny</option>
-            <option value="flipOutX">flipOutX</option>
-            <option value="flipOutY">flipOutY</option>
-          </optgroup>
-          <optgroup label="Lightspeed">
-            <option value="lightSpeedIn">lightSpeedIn</option>
-            <option value="lightSpeedOut">lightSpeedOut</option>
-          </optgroup>
-          <optgroup label="Rotating Extrancs">
-            <option value="rotateIn">rotateIn</option>
-            <option value="rotateInDownLeft">rotateInDownLeft</option>
-            <option value="rotateInDownRight">rotateInDownRight</option>
-            <option value="rotateInUpLeft">rotateInUpLeft</option>
-            <option value="rotateInUpRight">rotateInUpRight</option>
-          </optgroup>
-          <optgroup label="Rotating Exits">
-            <option value="rotateOut">rotateOup</option>
-            <option value="rotateOutDownLeft">rotateOutDownLeft</option>
-            <option value="rotateOutDownRight">rotateOutDownRight</option>
-            <option value="rotateOutUpLeft">rotateOutUpLeft</option>
-            <option value="rotateOutUpRight">rotateOutUpRight</option>
-          </optgroup>
-          <optgroup label="Sliding Entrances">
-            <option value="slideInUp">slideInUp</option>
-            <option value="slideInDown">slideInDown</option>
-            <option value="slideInLeft">slideInLeft</option>
-            <option value="slideInRight">slideInRight</option>
-          </optgroup>
-          <optgroup label="Sliding Exits">
-            <option value="slideOutUp">slideOutUp</option>
-            <option value="slideOutDown">slideOutDown</option>
-            <option value="slieOutLeft">slideOutLeft</option>
-            <option value="slideOutRight">slideOutRight</option>
-          </optgroup>
-          <optgroup label="Zoom Entrances">
-            <option value="zoomIn">zoomIn</option>
-            <option value="zoomInDown">zoomInDown</option>
-            <option value="zoomInLeft">zoomInLeft</option>
-            <option value="zoomInRight">zoomInRight</option>
-            <option value="zoomInUp">zoomInUp</option>
-          </optgroup>
-          <optgroup label="Zoom Exits">
-            <option value="zoomOut">zoomOut</option>
-            <option value="zoomOutDown">zoomOutDown</option>
-            <option value="zoomOutLeft">zoomOutLeft</option>
-            <option value="zoomOutRight">zoomOutRight</option>
-            <option value="zoomOutUp">zoomOutUp</option>
-          </optgroup>
-          <optgroup label="Specials">
-            <option value="hinge">hinge</option>
-            <option value="jackInTheBox">jackInTheBox</option>
-            <option value="rollIn">rollIn</option>
-            <option value="rollOut">rollOut</option>
-          </optgroup>
-      </select>
-      <input type="button" value="Animate It" id="btn">
-  </div>
+  <ul>
+    <div>Attention Seekers</div>
+    <li class="show">
+      <section>bounce</section>
+      <section>flash</section>
+      <section>pluse</section>
+      <section>rubberBand</section>
+      <section>shake</section>
+      <section>swing</section>
+      <section>tada</section>
+      <section>wobble</section>
+      <section>jello</section>
+    </li>
+    <div>Bouncing Entrances</div>
+    <li class="sh">
+      <section>bounceIn</section>
+      <section>bounceInDown</section>
+      <section>bounceInLeft</section>
+      <section>bounceInRight</section>
+      <section>bounceInUp</section>
+    </li>
+    <div>Bouncing Exits</div>
+    <li class="sh">
+      <section>bounceOut</section>
+      <section>bounceOutDown</section>
+      <section>bounceOutLeft</section>
+      <section>bounceOutRight</section>
+      <section>bounceOutUp</section>
+    </li>
+    <div>Fading Extrances</div>
+    <li class="sh">
+      <section>fadeIn</section>
+      <section>fadeInDown</section>
+      <section>fadeInDownBig</section>
+      <section>fadeInLeft</section>
+      <section>fadeInLeftBig</section>
+      <section>fadeInRight</section>
+      <section>fadeInRightBig</section>
+      <section>fadeInUp</section>
+      <section>fadeInUpBig</section>
+    </li>
+    <div>Flippers</div>
+    <li class="sh">
+      <section>flip</section>
+      <section>flipInX</section>
+      <section>flipInY</section>
+      <section>flipOutX</section>
+      <section>flipOutY</section>
+    </li>
+    <div>Lightspeed</div>
+    <li class="sh">
+      <section>LightSpeedIn</section>
+      <section>LightSpeedOut</section>
+    </li>
+    <div>Rotating Extrances</div>
+    <li class="sh">
+      <section>rotateIn</section>
+      <section>rotateInDownLeft</section>
+      <section>rotateInDownRight</section>
+      <section>rotateInUpLeft</section>
+      <section>rotateInUpRight</section>
+    </li>
+    <div>Rotating Exits</div>
+    <li class="sh">
+      <section>rotateOut</section>
+      <section>rotateOutDownLeft</section>
+      <section>rotateOutDownRight</section>
+      <section>rotateOutUpLeft</section>
+      <section>rotateOutUpRight</section>
+    </li>
+    <div>Sliding Entrances</div>
+    <li class="sh">
+      <section>slideInUp</section>
+      <section>slideInDown</section>
+      <section>slideInLeft</section>
+      <section>slideInRight</section>
+    </li>
+    <div>Sliding Exits</div>
+    <li class="sh">
+      <section>slideOutUp</section>
+      <section>slideOutDown</section>
+      <section>slideOutLeft</section>
+      <section>slideOutRight</section>
+    </li>
+    <div>Zoom Entrances</div>
+    <li class="sh">
+      <section>ZoomIn</section>
+      <section>ZoomInDown</section>
+      <section>ZoomInLeft</section>
+      <section>ZoomInRight</section>
+      <section>ZoomInUp</section>
+    </li>
+    <div>Zoom Exits</div>
+    <li class="sh">
+      <section>zoomOut</section>
+      <section>zoomOutDown</section>
+      <section>zoomOutLeft</section>
+      <section>zoomOutRight</section>
+      <section>zoomOutUp</section>
+    </li>
+    <div>Specials</div>
+    <li class="sh">
+      <section>hinge</section>
+      <section>JackInTheBox</section>
+      <section>rollIn</section>
+      <section>rollOut</section>
+    </li>
+  </ul>
 
   <script>
-    let btn = document.getElementById('btn');
     let animate = document.getElementById('animate');
-    let animates = document.getElementById('animates');
-    let name = animates.options[animates.selectedIndex];
+    let div = Array.from(document.querySelectorAll('ul > div'));
+    let li = Array.from(document.querySelectorAll('li'));
+    let sec = Array.from(document.querySelectorAll('section'));
+    
+    // 显示/隐藏效果
+    div.forEach((ele, ind, arr) => {
+      ele.addEventListener('click', function(e){
+        ele.nextElementSibling.classList.toggle('sh');
+      }, false);
+    });
 
-    // 选中动画名字后执行一次动画
-    animates.addEventListener('change', function(e){
-      name = this.options[this.selectedIndex].value;
-      animate.classList.replace(animate.className,name);
-      animate.style.animation = `${name} 1s linear`;
-    }, false);
-
-    // 点击按钮后重复执行一遍动画
-    // 先删除原来的style，在重新加一遍动画
-    btn.addEventListener('click', function(e){
-      name = animates.options[animates.selectedIndex].value;
-      animate.style.animation = `${name} 1s linear`;
-      // animate.removeAttribute('style');
-    }, false);
+    // 动画效果
+    sec.forEach((ele, ind, arr) => {
+      ele.addEventListener('click', function(e){
+        animate.style.animation = `${this.innerHTML} 1s linear`;
+      }, false);
+    })
   </script>
 </body>
 </html>
