--- a/demo/animate.css/animate.html
+++ b/demo/animate.css/animate.html
@@ -7,6 +7,25 @@
   <title>仿animate.css</title>
   <link rel="stylesheet" href="animate.css">
   <style>
+    body{
+      font-family: 'Microsoft YaHei', 'Courier New', Courier, monospace;
+    }
+    #animate{
+      position: absolute;
+      width: 340px;
+      height: 60px;
+      line-height: 60px;
+      font-size: 60px;
+      text-align: center;
+      left: 40%;
+      top: 40%;
+      cursor: pointer;
+    }
+    #sel{
+      position: absolute;
+      left: 40%;
+      bottom: 2%;
+    }
     ul{
       position: absolute;
       top: 0;
@@ -98,8 +117,8 @@
     </li>
     <div>Lightspeed</div>
     <li class="sh">
-      <section>LightSpeedIn</section>
-      <section>LightSpeedOut</section>
+      <section>lightSpeedIn</section>
+      <section>lightSpeedOut</section>
     </li>
     <div>Rotating Extrances</div>
     <li class="sh">
