add day030.html and update some poems

--- a/demo/animate.css/animate.html
+++ b/demo/animate.css/animate.html
@@ -152,11 +152,11 @@
     </li>
     <div>Zoom Entrances</div>
     <li class="sh">
-      <section>ZoomIn</section>
-      <section>ZoomInDown</section>
-      <section>ZoomInLeft</section>
-      <section>ZoomInRight</section>
-      <section>ZoomInUp</section>
+      <section>zoomIn</section>
+      <section>zoomInDown</section>
+      <section>zoomInLeft</section>
+      <section>zoomInRight</section>
+      <section>zoomInUp</section>
     </li>
     <div>Zoom Exits</div>
     <li class="sh">
@@ -169,7 +169,7 @@
     <div>Specials</div>
     <li class="sh">
       <section>hinge</section>
-      <section>JackInTheBox</section>
+      <section>jackInTheBox</section>
       <section>rollIn</section>
       <section>rollOut</section>
     </li>
